# souzu

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build.sh  install-hooks.sh  pyproject.toml  run-tests-with-coverage.sh
docs/plans/: 2026-01-23-slack-thread-monitoring-design.md  2026-01-23-slack-thread-monitoring-impl.md  2026-03-25-action-buttons.md  2026-03-25-slack-socket-mode.md  2026-03-27-camera-snapshot.md  2026-03-27-remote-control.md  2026-04-16-thread-adoption-on-restart.md
docs/specs/: 2026-03-25-action-buttons-design.md  2026-03-25-slack-socket-mode-design.md  2026-03-27-camera-snapshot-design.md  2026-03-27-remote-control-design.md  2026-04-28-recent-errors-button-design.md
src/souzu/: config.py  job_tracking.py  logs.py  meta.py
src/souzu/bambu/: camera.py  discovery.py  errors.py  mqtt.py
src/souzu/cli/: basic.py  main.py
src/souzu/commands/: compact.py  install.py  monitor.py  update.py
src/souzu/slack/: __init__.py  client.py  handlers.py  monitor.py  thread.py
src/souzu/systemd/: __init__.py
src/souzu/systemd/res/: souzu-update.service.template  souzu-update.timer  souzu.service.template
tests/souzu/: test_cli_main.py  test_compact.py  test_config.py  test_discovery.py  test_errors.py  test_install.py  test_job_tracking.py  test_logs.py  test_meta.py  test_monitor.py  test_mqtt.py  test_slack_thread.py  test_systemd.py  test_update.py
tests/souzu/bambu/: test_camera.py  test_mqtt.py
tests/souzu/commands/: test_monitor.py
tests/souzu/slack/: test_client.py  test_handlers.py  test_monitor.py
