[project]
name = "souzu"
description = "Service to monitor Bambu printers and publish print job notifications"
authors = [
    {name = "Luc Ritchie", email = "luc.ritchie@gmail.com"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp[speedups]>=3.11.12,<4.0.0",  # for slack-sdk async
    "aiomqtt>=2.3.0,<3.0.0",
    "anyio>=4.8.0,<5.0.0",
    "attrs>=24.3.0",
    "deepmerge>=2.0,<3.0",
    "cattrs>=24.1.2",
    "prettyprinter>=0.18.0,<0.19.0",
    "requests>=2.32.0,<3.0.0",
    "slack-sdk>=3.34.0,<4.0.0",
    "ssdp>=1.3.0,<2.0.0",
    "xdg-base-dirs>=6.0.2,<7.0.0",
]
dynamic = ["version"]

[project.scripts]
souzu = 'souzu.cli.main:main'

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true

[tool.hatch]
version.source = "vcs"
metadata.allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/souzu",
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
enable_error_code = [
    "truthy-bool",  # catch mistakes like "if f.exists()" instead of "if await f.exists()"
]

[tool.pyright]
pythonVersion = "3.12"
reportImplicitOverride = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
ignore = ["E402", "E501", "C901", "S101"]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "N",
    "S",
    "W",
    "ANN",
    "ASYNC",
    "UP",
    "RUF100",  # unused noqa
    "T201",  # print statements
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0,<2.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    "pyright>=1.1.393,<2.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.5,<1.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.9.6,<0.10.0",
    "types-requests",
    "yamllint>=1.35.1,<2.0.0",
]
